<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_category_of_your_event"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"
        android:textSize="16dp"
        android:fontFamily="casual"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="25dp">

        <RadioButton
            android:id="@+id/rb_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Sport" />

        <RadioButton
            android:id="@+id/rb_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Party"/>

        <RadioButton
            android:id="@+id/rb_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Education"/>

        <RadioButton
            android:id="@+id/rb_culture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Culture"/>

        <RadioButton
            android:id="@+id/rb_esport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-sport" />

    </RadioGroup>


</LinearLayout>