...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/defaultTitle" />

            <TextView
                android:id="@+id/category"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:gravity="end"
...
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/ic_place_24dp" />

            <TextView
                android:id="@+id/address"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultPlace"
                android:textSize="14sp" />

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/membersMax"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12"
                android:textSize="14sp" />

...
